NEW267743
iOS 17.2-18.3.1 beta Fullscreen API Preview - Unexpected Fullscreen API behaviors
https://bugs.webkit.org/show_bug.cgi?id=267743
Summary iOS 17.2-18.3.1 beta Fullscreen API Preview - Unexpected Fullscreen API behav...
Byungseon(Sun) Shin
Reported 2024-01-18 17:25:25 PST
When we tried applied the Fullscreen API behavior applied on the full screen mode of the Cloud gaming using the iOS Beta 17.2 or 17.3 we were getting a prompt often which said “It looks like you are typing while in full screen”. I believe this Phishing message could be shown at first time, but once user want to stay the page, it shouldn't be shown up again.
Attachments
FullScreen-Message-While-Touching-Event (4.05 MB, image/png)
2024-01-18 17:27 PST, Byungseon(Sun) Shin
no flags
Additional Full Screen Alert Message (1.11 MB, image/png)
2024-01-23 14:38 PST, Byungseon(Sun) Shin
no flags
Byungseon(Sun) Shin
Comment 1 2024-01-18 17:27:56 PST
Created attachment 469448 [details] FullScreen-Message-While-Touching-Event
Byungseon(Sun) Shin
Comment 2 2024-01-18 17:51:58 PST
Byungseon(Sun) Shin
Comment 3 2024-01-23 14:38:24 PST
Created attachment 469515 [details] Additional Full Screen Alert Message
Byungseon(Sun) Shin
Comment 4 2024-01-23 14:40:28 PST
As discussed through PR#22953, proposing adding new options to get user's approval to allow the full screen with touch events.
Radar WebKit Bug Importer
Comment 5 2024-01-25 17:26:13 PST
Jeffrey Blanz
Comment 6 2024-04-26 07:27:50 PDT
(In reply to Byungseon(Sun) Shin from comment #1) > Created attachment 469448 [details] > FullScreen-Message-While-Touching-Event How did you manage to play Geforce Now on a iPhone with Fullscreen API enabled? Considering (1) it is a feature flag that is default off, meaning enabling it will not affect PWAs and (2) Geforce Now does not allow you to play in the safari app, you get hit with a "add to Home Screen" prompt. Also on iPadOS with fullscreen API enabled in the Geforce Now PWA, touch events are allowed.
Note You need to log in before you can comment on or make changes to this bug.