iOS 17.2-17.5 beta Fullscreen API Preview - Unexpected Fullscreen API behaviors https://bugs.webkit.org/show_bug.cgi?id=267743

Reviewed by NOBODY (OOPS!).

Leaving exisint Phishing prompot, proposing adding new prompt for users who want
to stay fullscreen with touch events.

* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController initWithWebView:]):
(-[WKFullScreenViewController _touchDetected:]):
(-[WKFullScreenViewController _showPhishingAlert]):