Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm
@@ -168,6 +168,7 @@ private:
 #if ENABLE(LINEAR_MEDIA_PLAYER)
     RetainPtr<UIView> _environmentPickerButtonView;
 #endif
+    BOOL _isIgnoreFurtherHeuristic;
 }
 
 @synthesize prefersStatusBarHidden = _prefersStatusBarHidden;
@@ -204,6 +205,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     _shouldHideCustomControls = NO;
     _isInteractingWithSystemChrome = NO;
 #endif
+    _isIgnoreFurtherHeuristic = NO;
 
     return self;
 }
@@ -827,7 +829,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     ASSERT(_valid);
     if ([_touchGestureRecognizer state] == UIGestureRecognizerStateEnded && !self._webView._shouldAvoidSecurityHeuristicScoreUpdates) {
         double score = _secheuristic.scoreOfNextTouch([_touchGestureRecognizer locationInView:self.view]);
-        if (score > _secheuristic.requiredScore())
+        if (!_isIgnoreFurtherHeuristic && score > _secheuristic.requiredScore())
             [self _showPhishingAlert];
     }
     if (!self.animating)
@@ -882,8 +884,18 @@ ALLOW_DEPRECATED_DECLARATIONS_END
         _secheuristic.reset();
     }];
 
+    UIAlertAction* stayActionIgnore = [UIAlertAction actionWithTitle:WEB_UI_STRING_KEY("Stay in Full Screen & Trust the website", "Stay in Full Screen & Trust the website (Element Full Screen)", "Full Screen Deceptive Website Stay Action") style:UIAlertActionStyleDefault handler:^(UIAlertAction * action) {
+        if (auto page = [self._webView _page]) {
+            page->resumeActiveDOMObjectsAndAnimations();
+            page->resumeAllMediaPlayback([] { });
+        }
+        _secheuristic.reset();
+        _isIgnoreFurtherHeuristic = YES;
+    }];
+
     [alert addAction:exitAction];
     [alert addAction:stayAction];
+    [alert addAction:stayActionIgnore];
     [self presentViewController:alert.get() animated:YES completion:nil];
 }
 
